# Gamma-ray-detector-simulations-using-Geant4

./: CMakeLists.txt  README.md  output.txt  sim.cc
analysis/: spectrum.py
include/: PMActionInitialization.hh  PMDetectorConstruction.hh  PMPhysicsList.hh  PMPrimaryGenerator.hh  PMSensistiveDetector.hh
macros/: startup.mac
src/: PMActionInitialization.cc  PMDetectorConstruction.cc  PMPhysicsList.cc  PMPrimaryGenerator.cc  PMSensitiveDetector.cc
